--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
       </div>
     </div>
     </div>
+    <div class="git-link">
+    <a href="https://github.com/ssbien/week-6-plus" target="_blank">GitHub Repository</a>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
