added unit conversion and modifiers

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         80
       </span>
       <span class="unit">
-        <a id=celsius> °C </a>
+        <a href="" id="celsius" class="active"> °C   </a> |
+        <a href="" id="fahrenheit">°F </a>
       </span>
     </div>
     <div class="weather-date">
