added main temp icon and wind speed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       New York
     </h1>
     <div class="main-temp">
+        <img
+        src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+        id="main-icon"
+        alt="clear"
+      />
       <span class="temperature" id="temperature">
         80
       </span>
@@ -33,6 +38,10 @@
       </div>
       <div class="current-date" id="todays-date">
         Sunday 11:34 AM
+      </div>
+      <div class="wind-speed" id="wind-speed">
+        Wind: 
+        <span class="speed" id="speed">2 km/hr</span>
       </div>
       <form id="search-form">
         <input type="text" placeholder="enter city" autocomplete="off" autofocus="on" id="search-text-input">
