coded forecast prediction in js, changed bg in css, removed fahrenheit

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         80
       </span>
       <span class="unit">
-        <a href="" id="celsius" class="active"> °C   </a> |
-        <a href="" id="fahrenheit">°F </a>
+        <a href="" id="celsius" class="active"> °C   </a>
       </span>
     </div>
     <div class="weather-date">
@@ -50,97 +49,13 @@
       <div class="col-12">
       </div>
     </div>
-    <div class="forecast row">
-      <div class="col">
-            <div class="forecast-col">
-              <div class="forecast-temperature">
-                <span class="forecast-temperature-min">
-                  67°
-                </span>
-                /
-                <span class="forecast-temperature-max">
-                  83°
-                </span>
-              </div>
-              <i class="fa-solid fa-sun"></i>
-              <div class="forecast-date">
-                  Mon
-              </div>
-            </div>
-      </div>
-      <div class="col">
-          <div class="forecast-col">
-            <div class="forecast-temperature">
-              <span class="forecast-temperature-min">
-                66°
-              </span>
-              /
-              <span class="forecast-temperature-max">
-                84°
-              </span>
-            </div>
-            <i class="fa-solid fa-cloud-showers-heavy"></i>
-            <div class="forecast-date">
-                Tue
-            </div>
-          </div>
-      </div>
-      <div class="col">
-          <div class="forecast-col">
-            <div class="forecast-temperature">
-              <span class="forecast-temperature-min">
-                70°
-              </span>
-              /
-              <span class="forecast-temperature-max">
-                92°
-              </span>
-            </div>
-            <i class="fa-solid fa-sun"></i>
-            <div class="forecast-date">
-                Wed
-            </div>
-          </div>
-      </div>
-      <div class="col">
-          <div class="forecast-col">
-            <div class="forecast-temperature">
-              <span class="forecast-temperature-min">
-                73°
-              </span>
-              /
-              <span class="forecast-temperature-max">
-                89°
-              </span>
-            </div>
-            <i class="fa-solid fa-cloud-sun"></i>
-            <div class="forecast-date">
-                Thu
-            </div>
-          </div>
-      </div>
-      <div class="col">
-          <div class="forecast-col">
-            <div class="forecast-temperature">
-              <span class="forecast-temperature-min">
-                70°
-              </span>
-              /
-              <span class="forecast-temperature-max">
-                86°
-              </span>
-            </div>
-            <i class="fa-solid fa-sun"></i>
-            <div class="forecast-date">
-                Fri
-            </div>
-          </div>
-      </div>
+    <div class="forecast row" id="forecast">
     </div>
     </div>
     <div class="git-link">
-    <a href="https://github.com/ssbien/week-6-plus" target="_blank">GitHub Repository</a>
-    </div>
+    <a href="https://github.com/ssbien/week-6-plus" target="_blank">Open-source code </a>
+  by Stephanie Bien  
+  </div>
     <script src="src/index.js"></script>
   </body>
 </html>
